--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "@nvivn/purejs",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
-  "main": "index.js",
+  "main": "dist/nvivn",
   "files": [
     "dist",
     "bin"
   ],
   "bin": {
-    "nvivn-http": "bin/http.js",
-    "nvivn-https": "bin/https.js",
     "nvivn": "bin/nvivn.js"
   },
   "scripts": {
     "clean": "rm -r dist",
-    "build": "npm run clean && npm run build:http && npm run build:https && npm run build:nvivn",
-    "build:http": "ncc build http.js && terser dist/index.js -o dist/http.js && rm dist/index.js",
-    "build:https": "ncc build https.js && terser dist/index.js -o dist/https.js && rm dist/index.js",
+    "build": "npm run clean ; npm run build:nvivn",
     "build:nvivn": "ncc build nvivn.js && terser dist/index.js -o dist/nvivn.js && rm dist/index.js"
   },
   "author": "Jesse Kriss <jesse@jklabs.net>",
